# cpp-project-template

./: README.md  vcpkg.json
src/: CMakeLists.txt
