
add_executable(my_app_template
    main.cpp
)


#target_link_libraries(my_app_template
#    PRIVATE Qt6::Quick
#            MyAppTemplateControls
#            MyAppTemplateApp
#)

#include(GNUInstallDirs)
#install(TARGETS my_app_template
#    BUNDLE DESTINATION .
#    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
#    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
#)
